--- a/website/assets/styles/layouts/order/_orderStepProductSelection.scss
+++ b/website/assets/styles/layouts/order/_orderStepProductSelection.scss
@@ -232,6 +232,8 @@
     }
 
     > div {
+      margin-bottom: 2em;
+
       li {
         > .cart-product-price {
           margin-right: -2.9em;
